[gd_scene load_steps=5 format=3 uid="uid://c7emb8w7nldom"]

[ext_resource type="Script" path="res://entities/projectiles/projectile.gd" id="1_w3qkb"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8iq8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hcvsx"]
radius = 3.0
height = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6rgi5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[node name="Projectile" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_w3qkb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8iq8t")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.409888

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(27, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hcvsx")

[node name="HitVfx" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(40, 0)
sprite_frames = SubResource("SpriteFrames_6rgi5")
animation = &"hit"

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="HitVfx" to="." method="_on_hit_vfx_animation_finished"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
